# pre-drop

./: .gitignore  CMakeLists.txt  README.md  index.html  sonar-project.properties
.github/workflows/: build.yml  perf.yml  quality.yml  release.yml  sonarcloud.yml
Source/: BuildUpCurve.h  EffectChips.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PreDropEngine.h  PreDropLookAndFeel.cpp  PreDropLookAndFeel.h  PreDropTheme.h  PreDropVisualModel.h  RtSafety.h
Tests/: PreDropEngineTests.cpp  PreDropVisualModelTests.cpp  perf_bench.cpp  rt_check.cpp  rtsan_suppressions.txt
dev/bench/: data.js
